kubernetes/apps/base/neko/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: neko
  name: neko
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: neko
  template:
    metadata:
      labels:
        io.kompose.service: neko
    spec:
      containers:
        - name: neko
          image: ghcr.io/m1k1o/neko/firefox:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 59000
              protocol: TCP
            - containerPort: 59000
              protocol: UDP
      restartPolicy: Always
