kubernetes/apps/base/neko/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: neko
  name: neko
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: webrtc-tcp
      port: 59000
      protocol: TCP
      targetPort: 59000
  selector:
    io.kompose.service: neko
