kubernetes/apps/base/neko/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: neko
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`research.${cluster_domain}`)
      kind: Rule
      services:
        - name: neko
          port: 8080
